Added more themes Better UI

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 /* in index.css or globals.css */
-.scrollbar-always {
+/* .scrollbar-always {
   overflow-y: scroll;
   scrollbar-gutter: stable;
-}
+} */
